working scroll strategy and ui minor fixes

--- a/apps/front/src/index.html
+++ b/apps/front/src/index.html
@@ -5,6 +5,7 @@
     <title>Front</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="Description" content="Free and secure chat application">
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
       rel="stylesheet"
